<resources>
    <string name="app_name">StoryAppSubmission</string>
    <string name="desc_logo">App Logo</string>
    <string name="hint_name">Masukkan nama</string>
    <string name="hint_email">Masukkan email</string>
    <string name="hint_password">Masukkan password</string>
    <string name="login_page">Login</string>
    <string name="dummy_btn_label">Dummy</string>
    <string name="login_desc">Silahkan login terlebih dahulu</string>
    <string name="login_tail_desc">Belum punya akun? Silahkan DAFTAR</string>
    <string name="register_page">Daftar</string>
    <string name="register_desc">Silahkan daftar terlebih dahulu</string>
    <string name="register_tail_desc">Sudah punya akun? Silahkan LOGIN</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="story_not_found">Tidak ada cerita yang ditemukan</string>
    <string name="dummy_text">TextView</string>
    <string name="uploaded_image">Uploaded Image</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="description_question">Deskripsi</string>
    <string name="desc_hint">Masukkan deskripsi</string>
    <string name="go_to_add_story">Ke Add Story</string>
    <string name="thumbnail_question">Thumbnail</string>
    <string name="add_story_page">Tambahkan Story</string>
    <string name="label_submit_story">Submit Story</string>
    <string name="logout">Logout</string>
    <string name="maps">Maps</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Selanjutnya</string>
    <string name="previous">Sebelumnya</string>

    <string name="lorem_ipsum">"         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris         volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus         dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad         litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend         diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,         ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.           Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus         egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed         neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada         fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,         molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor         bibendum, vel congue leo egestas.           Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit         amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,         molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer         interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at         lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,         in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque         est.           Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.         Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui         non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In         eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,         quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra         ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a         placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus         convallis.           Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et         malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa         gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,         libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper         sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.     "</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>
