<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.AddStoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_story_page"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvImageQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/thumbnail_question"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivThumbnail"
            android:layout_width="wrap_content"
            android:layout_height="241dp"
            android:contentDescription="@string/uploaded_image"
            android:scaleType="center"
            android:visibility="gone"
            tools:layout_editor_absoluteX="121dp"
            tools:layout_editor_absoluteY="55dp"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/camera"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gallery"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDescQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/description_question"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Masukkan deskripsi"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/desc_hint"
            android:inputType="textMultiLine"
            android:minHeight="48dp" />

        <com.example.storyappsubmission.ui.view.ButtonWithLoading
            android:id="@+id/btnUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>