<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_page"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLoginDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/login_desc"
        android:textSize="16sp"
        android:textStyle="normal" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="237dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/desc_logo"
        android:src="@drawable/image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:errorEnabled="true"
        >

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Masukkan email"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="true"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:errorIconDrawable="@null"
        android:layout_marginBottom="32dp"
        >

        <com.example.storyappsubmission.ui.view.CustomPasswordView
            android:id="@+id/cvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:background="@android:color/transparent"
            android:inputType="textPassword"
            android:minHeight="48dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="320dp"
        android:text="@string/login_page" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:textAlignment="center">

        <TextView
            android:id="@+id/tvTailing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_tail_desc"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>